--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,13 @@ textarea {
     margin-top: 15px;
 }
 
+#left-column {
+    width: 45%;
+    padding-left: 5%;
+    float:left;
+}
+
+#right-column {
+    width: 45%;
+    float: left;
+}
