--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,12 @@ textarea {
     font-family: monospace;
 }
 
+.series {
+    border-bottom: thin;
+    border-bottom-style: solid;
+    padding-bottom: 2em;
+    padding-top: 1em;
+}
 
 .plot {
     margin-top: 15px;
@@ -32,3 +38,5 @@ textarea {
 .clickable-label {
     cursor: pointer;
 }
+
+
