Removed for attributes by moving checkboxes inside label.

--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,10 @@ textarea {
     cursor: pointer;
 }
 
+.clickable-label:hover {
+    background-color: lightgray;
+}
+
 #page-description {
     width: 70ex;
     margin: 0 auto;
